unpackaged/objects/BusinessCourtesy__c.object
<CustomObject>
  <description>Used to keep record of the value, nature, purpose, and recipient of any
gift, meal, subsidy or other economic benefit, provided directly or through agents to a Contact in
connection with sales and marketing activities. Can be used to monitor and comply with policies and laws.
TFUS-000000887</description>
  <fields>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Courtesies</relationshipLabel>
    <relationshipName>Business_Courtesies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Courtesy_Type__c</fullName>
    <description>Type of the benefit provided to the contact</description>
    <label>Courtesy Type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Meal</fullName>
        </value>
        <value>
          <fullName>Gift</fullName>
          <isActive>false</isActive>
          <label>Gift</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Date__c</fullName>
    <inlineHelpText>When did/will the contact receive it?</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>End_Of_The_Year__c</fullName>
    <description>This is a help field to trigger a time dependent action on the process Business Courtesies to uncheck the "This Year" Field automatically.</description>
    <formula>DATE(YEAR( Date__c ), 12 , 31 )</formula>
    <inlineHelpText>DON'T ADD TO PAGE LAYOUT</inlineHelpText>
    <label>End Of The Year</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Note__c</fullName>
    <description>To describe or give more details. Note to other colleagues...etc</description>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>This_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is a workaround to filter the rollup summary field on contacts "Number Of Meals (CY)", it helps to count number of courtesies this year. This checkbox shouldn't be displayed on layout and will be updated whenever the record is changed through process and at the end of the year</description>
    <inlineHelpText>DON'T ADD TO ANY LAYOUT</inlineHelpText>
    <label>This Year</label>
    <type>Checkbox</type>
  </fields>
  <label>Business Courtesy</label>
  <nameField>
    <displayFormat>BC{00000000}</displayFormat>
    <label>Business Courtesy Id</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Business Courtesies</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>